feat: implemented rapidoc
